# specWise

./: .gitignore  README.md  doc.md
core/: .gitignore  README.md  celerybeat-schedule  docker-compose.yaml  gunicorn.conf.py  local.env  main.py  ngrok.sh  parse_pdf.py  parsed_items_example_1.json  parsed_items_example_1_expanded.json  parsed_items_example_2.json  parsed_items_example_2_expanded.json  pyproject.toml  run.sh
core/app/: constants.py  main.py  worker.py
core/app/celery_tasks/: tasks.py
core/app/handlers/: data.py  files.py  task.py
core/app/helper/: clean_data.py
core/app/models/: base_dto.py  models.py  validator.py
core/app/services/: mongo_db.py
core/app/services/llm/: llm.py  prompts.py
core/app/services/processing/: data_processing.py  pipeline.py  vectore_client.py
core/app/utils/: file_utils.py
core/qdrant/: raft_state.json
specwise-frontend/: README.md  package.json
specwise-frontend/app/: layout.tsx  page.tsx
specwise-frontend/app/files/[id]/: page.tsx
specwise-frontend/components/: article_selections.tsx  file-upload.tsx  file_table.tsx  files_table.tsx  tasks-drawer.tsx  tasks-initializer.tsx  tasks-table.tsx
specwise-frontend/hooks/: use-cancel-task.ts  use-data.ts  use-files.ts  use-tasks.ts
specwise-frontend/lib/: api-client.ts
specwise-frontend/store/: tasks-store.ts
specwise-frontend/types/: api.ts
